feat: production-ready - env vars, render.yaml, CORS, JWT config, README